# pvss-haskell

./: .haskell-ci  .travis.yml  LICENSE  README.md  pvss.cabal  stack.yaml
.travis/: stack-ghc-8.2.yaml
app/: Main.hs
src/Crypto/: PVSS.hs  SCRAPE.hs
src/Crypto/PVSS/: DLEQ.hs  ECC.hs  Polynomial.hs
src/Crypto/SCRAPE/: BDS.hs
test/: GoldenTest.hs  Spec.hs
tests/goldens/crypto/pvss/: escrow
