name:                pvss
version:             0.1.0.0
synopsis:            Public Verifiable Secret Sharing
description:         Please see README.md
homepage:            https://github.com/githubuser/pvss#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          libraries@typed.io
copyright:           2016 IOHK
category:            Crypto
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.PVSS
  other-modules:       Crypto.PVSS.ECC
                       Crypto.PVSS.DLEQ
                       Crypto.PVSS.Polynomial
  build-depends:       base >= 4.7 && < 5
                     , memory
                     , deepseq
                     , binary
                     , bytestring
                     , cryptonite
                     , cryptonite-openssl
                     , integer-gmp
  default-language:    Haskell2010

executable pvss-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deepseq
                     , memory
                     , hourglass
                     , cryptonite
                     , pvss
  default-language:    Haskell2010

test-suite pvss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cryptonite
                     , pvss
                     , tasty
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pvss
