name:                pvss
Version:             0.1
synopsis:            Public Verifiable Secret Sharing
description:         Please see README.md
homepage:            https://github.com/input-output-hk/pvss-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          vincent.hanquez@iohk.io
copyright:           2016 IOHK
category:            Crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag scrape-bds
  Description: Build BDS version of PVSS-SCRAPE protocol
  Manual: True
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.PVSS
                       Crypto.SCRAPE
  other-modules:       Crypto.PVSS.ECC
                       Crypto.PVSS.DLEQ
                       Crypto.PVSS.Polynomial
  build-depends:       base >= 4.7 && < 5
                     , memory
                     , deepseq
                     , binary
                     , bytestring
                     , cryptonite
                     , cryptonite-openssl >= 0.3
                     , foundation < 0.0.7
                     , integer-gmp
  default-language:    Haskell2010
  ghc-options:         -Wall

  if flag(scrape-bds)
     exposed-modules:  Crypto.SCRAPE.BDS
     build-depends:    mcl,
                       vector

executable pvss-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deepseq
                     , memory
                     , hourglass
                     , cryptonite
                     , pvss
                     , vector
  default-language:    Haskell2010

test-suite pvss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cryptonite
                     , pvss
                     , tasty
                     , tasty-quickcheck
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/pvss-haskell
